# PySF-AutoGenerator

./: .gitignore  CMakeLists.txt.in  LICENSE.md  ProjCMake.bat  ProjCMake.sh  ProjCMake_ios.sh  README.md  THIRD-PARTY.txt  build.bat  build.sh  build_ios.sh  collect.bat  collect.sh  collect_ios.sh  init.bat  init.sh  parse.py  pyFilesGen.py  requirements.txt  versions.conf
Additions/: bind_Angle_Addition.txt  bind_BlendMode_Addition.txt  bind_Color_Addition.txt  bind_ContextSettings_Addition.txt  bind_Event_Addition.txt  bind_Image_Addition.txt  bind_IpAddress_Addition.txt  bind_Music_Addition.txt  bind_RenderStates_Addition.txt  bind_Shader_Addition.txt  bind_SoundStream_Addition.txt  bind_StencilMode_Addition.txt  bind_Time_Addition.txt  bind_Transform_Addition.txt  bind_Version_Addition.txt  bind_VertexArray_Addition.txt  bind_VideoMode_Addition.txt  bind_View_Addition.txt
PybindGen/: __init__.py  bindingGenerator.py  hppParser.py  hppSorter.py  utils.py
include/: A_utils.hpp  B_bind_Vector.hpp  C_bind_Rect.hpp  D_bind_Matrix.hpp  E_bind_Handle.hpp  F_bind_Drawable.hpp  bind_Drawable.hpp  bind_Handle.hpp  bind_Matrix.hpp  bind_Matrix.inl  bind_Rect.hpp  bind_Rect.inl  bind_Vector.hpp  bind_Vector.inl  string_utils.hpp  string_utils.inl  utils.hpp  utils.inl  wrap_utils.hpp  wrap_utils.inl
pre-compiled/: CMakeLists.txt  main.cpp
src/: A_utils.cpp  A_utils.mm  B_bind_Vector.cpp  C_bind_Rect.cpp  D_bind_Matrix.cpp  E_bind_Handle.cpp  F_bind_Drawable.cpp  bind_Drawable.cpp  bind_Handle.cpp  bind_Matrix.cpp  bind_Rect.cpp  bind_Vector.cpp  string_utils.cpp  utils.cpp  utils.mm  wrap_utils.cpp
